// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Fragment> 1`] = `
<body>
  <div />
  <span />
</body>
`;

exports[`multiple dynamic child expressions 1`] = `
<body>
  <div />
  <span />
</body>
`;

exports[`multiple dynamic child expressions 2`] = `
<body>
  <span />
</body>
`;

exports[`multiple dynamic child expressions 3`] = `<body />`;

exports[`multiple static child elements 1`] = `
<body>
  <div />
  <span />
</body>
`;

exports[`no children 1`] = `<body />`;

exports[`one dynamic child expression 1`] = `
<body>
  foo
</body>
`;

exports[`one static child 1`] = `
<body>
  <div />
</body>
`;

exports[`one static child expression 1`] = `
<body>
  foo
</body>
`;
